--- a/style.css
+++ b/style.css
@@ -54,15 +54,16 @@ body {
 /* ================= COUNSELLING BAR ================= */
 .counselling {
     width: 100%;
+    height: 30px;
     background-color: #00D09C;
-    padding: 0.09vw;
+    /* padding: 0.09vw; */
     text-align: center;
     color: #000;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 10000;
-    font-size: 0.8vw;
+    /* font-size: 0.8vw; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,9 +82,9 @@ body {
     color: #000000;
     width: 0.5vw;
     height: 0.5vw;
-border-radius: 50%;
-    background-color: aliceblue;
-    padding: 0.6vw;
+/* border-radius: 50%; */
+    /* background-color: aliceblue; */
+    /* padding: 0.6vw; */
   display: flex;
 align-items: center;
 justify-content: center;
@@ -92,7 +93,7 @@ justify-content: center;
 
 .counselling-button {
     padding:0px 5px ;
-    font-size: 0.7vw;
+    /* font-size: 0.7vw; */
     background-color: transparent;
     border-radius: 4px;
     border: 1px solid #fff;
