--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ li {
 
 
 main{
+    padding: 10px;
     margin-top: 110px;
     display: flex;
     justify-content: center;
@@ -606,4 +607,123 @@ input, select{
 
     }
 
+.mileStone{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
 
+.mileStone div {
+    background-color: #ffffff;
+    width: 15vw;
+    
+    padding: 1.5vw;
+    padding-top: 2.5vw;
+    font-size: 0.8vw;
+    position: relative;  
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+/* COMMON BEFORE STYLE */
+.mileStone div::before {
+    content: "";
+    position: absolute;
+    width: 4vw;
+    height: 4vw;
+    top: -2vw;
+    left: 7vw;
+    transform: translateX(-50%);
+    /* background-size: 60%; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
+
+/* DIFFERENT ICONS */
+.mileStone .m1::before { background-image: url("images/Group.svg"); }
+.mileStone .m2::before { background-image: url("images/track_changes.svg"); }
+.mileStone .m3::before { background-image: url("images/school.svg"); }
+.mileStone .m4::before { background-image: url("images/forum.svg"); }
+
+
+@media (max-width:926px){
+    
+.mileStone{
+   
+    justify-content: space-evenly;
+   
+}
+
+.mileStone div {
+    background-color: #ffffff;
+    width: 18vw;
+    
+    padding: 1vw;
+    padding-top: 4vw;
+    font-size: 1.3vw;
+    position: relative;  
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+/* COMMON BEFORE STYLE */
+.mileStone div::before {
+    content: "";
+    position: absolute;
+   padding: 1vw;
+    width: 4vw;
+    height: 4vw;
+    top: -3vw;
+    left: 9vw;
+    transform: translateX(-50%);
+    /* background-size: 60%; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
+
+}
+@media (max-width:450px) {
+       
+.mileStone{
+   
+    justify-content: space-evenly;
+   
+}
+
+.mileStone div {
+    background-color: #ffffff;
+    width: 18vw;
+    
+    padding: 2vw;
+    padding-top: 12vw;
+    font-size: 2vw;
+    position: relative;  
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+/* COMMON BEFORE STYLE */
+.mileStone div::before {
+    content: "";
+    position: absolute;
+   padding: 4vw;
+    width: 4vw;
+    height: 4vw;
+    top: -4vw;
+    left: 9vw;
+    transform: translateX(-50%);
+    /* background-size: 60%; */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+}
+}
