--- a/style.css
+++ b/style.css
@@ -11,6 +11,49 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 16px;
 }
+
+main span,
+section span {
+  background: linear-gradient(90deg, #5367FF, #00D09C);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  display: inline-block;
+  font-weight: inherit;
+  transition: opacity 0.3s ease, filter 0.3s ease;
+}
+
+/* Shine Effect on Hover */
+main span::after,
+section span::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width:40%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent 0%,
+    rgba(255, 255, 255, 0.55) 50%,
+    transparent 100%
+  );
+  transform: skewX(-20deg);
+  transition: 0.6s ease;
+  pointer-events: none;
+}
+
+/* Hover Effect */
+main span:hover,
+section span:hover {
+  filter: brightness(1.15); /* subtle glow */
+}
+
+main span:hover::after,
+section span:hover::after {
+  left: 120%; /* shine sweep movement */
+}
+
 .submit-btn {
   padding: 12px 14px;
   border: none;
@@ -266,9 +309,6 @@ h2 {
   font-weight: 900;
 }
 
-.form-title span {
-  color: #01cc9f;
-}
 
 form label {
   font-size: clamp(0.85rem, 1vw, 0.5rem);
@@ -719,12 +759,13 @@ select:focus {
 .faq-section {
   padding: 5vw;
   width: 100%;
-  max-width: 750px;
+  max-width: 1200px;
   margin: 40px auto;
   padding: 5vw;
 
   .faq-header{
     text-align: center;
+    margin-bottom: 2rem;
   }
 
 .faq-item {
@@ -734,7 +775,7 @@ select:focus {
 
 .faq-item summary {
   cursor: pointer;
-  font-size: 1rem;
+   font-size: clamp(1.2rem, 1.2vw, 2.5rem);
   font-weight: 600;
   list-style: none;
   display: flex;
@@ -770,6 +811,8 @@ select:focus {
 }
 
 .faq-item p {
+  font-size: clamp(1rem, 1vw, 1.2rem);
+ 
   opacity: 0;
   max-height: 0;
   overflow: hidden;
@@ -784,7 +827,7 @@ select:focus {
 
 .faq-item[open] p {
   opacity: 1;
-  max-height: 400px;
+  max-height: 500px;
   transform: translateX(0);
   clip-path: inset(0 0 0 0);
 }
@@ -1015,6 +1058,7 @@ select:focus {
   }
 
   main {
+    margin-top: 70px ;
     flex-direction: row;
     gap: 40px;
   }
@@ -1161,19 +1205,15 @@ select:focus {
 }
 }
 
-  /* .faq-section {
-    margin: 10px auto;
-    padding: 0;
-    
-  .faq-item summary {
-    font-size: 1.2rem;
-  }
+  
+  .faq-section {
+  padding: 5vw;
+  width: 100%;
+  max-width: 1300px;
 
-  .faq-item p {
-    font-size: 1rem;
-  }
-  } */
 
+
+}
 
 
 }
