--- a/style.css
+++ b/style.css
@@ -102,9 +102,9 @@ section span:hover::after {
   width: 100%;
   height: 18px;
   font-size: 12px;
-  background-color: #00D09C;
+  background-color: black;
   text-align: center;
-  color: #000;
+  color: white;
   position: fixed;
   top: 0;
   left: 0;
@@ -117,13 +117,13 @@ section span:hover::after {
 .counselling span:first-child {
   flex: 1;
   text-align: center;
-  color: #FFF;
+  /* color: #FFF; */
 }
 
 .closeCounselling {
   cursor: pointer;
   margin-right: 10px;
-  color: #000000;
+  /* color: #000000; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,7 +134,7 @@ section span:hover::after {
   font-size: 12px;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #fff;
+  /* border: 1px solid #fff; */
   color: white;
 }
 
